--- a/3. minimal-node-app/package.json
+++ b/3. minimal-node-app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "nodemon --exec babel-node src/index1.js",
     "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [],
@@ -19,7 +19,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.9",
     "cross-fetch": "^3.1.4",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "graphql": "^15.5.3"
   }
 }
